# legged_control

legged_controllers/: package.xml  (+1 more)
legged_interface/: CMakeLists.txt  package.xml
legged_interface/include/legged_interface/: LeggedRobotInterface.h  LeggedRobotPreComputation.h
legged_interface/include/legged_interface/common/: ModelSettings.h  utils.h
legged_interface/include/legged_interface/constraint/: FrictionConeConstraint.h  NormalVelocityConstraintCppAd.h  ZeroForceConstraint.h  ZeroVelocityConstraintCppAd.h
legged_interface/include/legged_interface/cost/: LeggedRobotQuadraticTrackingCost.h
legged_interface/include/legged_interface/dynamics/: LeggedRobotDynamicsAD.h
legged_interface/include/legged_interface/foot_planner/: SplineCpg.h  SwingTrajectoryPlanner.h
legged_interface/include/legged_interface/gait/: GaitSchedule.h  LegLogic.h  ModeSequenceTemplate.h  MotionPhaseDefinition.h
legged_interface/include/legged_interface/initialization/: LeggedRobotInitializer.h
legged_interface/include/legged_interface/reference_manager/: SwitchedModelReferenceManager.h
legged_interface/src/: LeggedRobotInterface.cpp
legged_interface/src/common/: ModelSettings.cpp
legged_interface/src/dynamics/: LeggedRobotDynamicsAD.cpp
legged_interface/src/foot_planner/: CubicSpline.cpp  SplineCpg.cpp  SwingTrajectoryPlanner.cpp
legged_interface/src/gait/: Gait.cpp  GaitSchedule.cpp  LegLogic.cpp  ModeSequenceTemplate.cpp
legged_interface/src/initialization/: LeggedRobotInitializer.cpp
legged_interface/src/reference_manager/: SwitchedModelReferenceManager.cpp
(+32 files in other folders)
